--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "homepage": "https://github.com/StrongSpider/berzerk-bot#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "discord.js": "^13.5.0"
   },
-  "engines":{
-    "node":"17.3.0"
- }
+  "engines": {
+    "node": "17.3.0"
+  }
 }
