--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/StrongSpider/berzerk-bot#readme",
   "dependencies": {
     "axios": "^0.24.0",
-    "discord.js": "^13.5.0"
+    "discord.js": "^13.5.0",
+    "express": "^4.17.2"
   },
   "engines": {
     "node": "17.3.0"
