--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "token": "",
     "tags": ["DISCORD_EMPLOYEE", "TEAM_USER", "DISCORD_CERTIFIED_MODERATOR"],
-    "loggingWebhook": "https://canary.discord.com/api/webhooks/926222398099951626/Dw2yTHZ_iWDVR8rGw9BsUcM6qzw4N3iGjFuXie-zM6Sv7QBDEeh4unzK9_ZDwb0rcctg"
+    "loggingWebhook": ""
 }
